...
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="  CS427 Project App"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
...
            android:id="@+id/buttonAddCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Edit Locations" />

        <Button
            android:id="@+id/settingsPage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Settings" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
...
